<?xml version="1.0"?>
<package>
  <name>laser_ekf</name>
  <version>0.0.1</version>
  <description>The loc package</description>

  <maintainer email="zjuyinhuan@gmail.com">Huan Yin</maintainer>

  <license>ZJU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>ethzasl_icp_mapper</build_depend>
  <run_depend>ethzasl_icp_mapper</run_depend>

</package>
